--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,26 +93,26 @@ dependencies {
   implementation deps.rx.rxandroid
   implementation deps.rx.rxkotlin2
 
+  implementation deps.retrofit.runtime
+  implementation deps.retrofit.gson
+  implementation deps.retrofit.rxjava2
+  implementation deps.okhttp.runtime
+  implementation deps.okhttp.logging_interceptor
+
   implementation deps.coroutines.core
   implementation deps.coroutines.android
 
-  implementation deps.jsoup
+  implementation deps.glide.runtime
+  annotationProcessor deps.glide.compiler
 
+  implementation deps.jsoup
   implementation deps.easydeviceinfo
   implementation deps.licensedialog
   implementation deps.timber
   implementation deps.easyprefs
   implementation deps.rssparser
   implementation deps.lottie
-
-  implementation deps.glide.runtime
-  annotationProcessor deps.glide.compiler
-
-  implementation deps.retrofit.runtime
-  implementation deps.retrofit.gson
-  implementation deps.retrofit.rxjava2
-  implementation deps.okhttp.runtime
-  implementation deps.okhttp.logging_interceptor
+  implementation deps.rev_divider
 
   testImplementation deps.atsl.junit
   androidTestImplementation deps.atsl.runner
