--- a/versions.gradle
+++ b/versions.gradle
@@ -39,6 +39,7 @@ versions.jsoup = '1.11.3'
 versions.coroutines = '1.2.0'
 versions.fragment = '1.0.0'
 versions.koltin_reflect = '1.3.31'
+versions.rev_divider = '3.0.0'
 def deps = [:]
 
 def androidx = [:]
@@ -127,6 +128,7 @@ deps.licensedialog = "de.psdev.licensesdialog:licensesdialog:$versions.licensedi
 deps.easyprefs = "com.pixplicity.easyprefs:library:$versions.easyprefs"
 deps.rssparser = "com.prof.rssparser:rssparser:$versions.rssparser"
 deps.jsoup = "org.jsoup:jsoup:$versions.jsoup"
+deps.rev_divider = "com.github.fondesa:recycler-view-divider:$versions.rev_divider"
 
 ext.deps = deps
 
