--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 # enable the new data binding compiler
 android.databinding.enableV2=true
+#android.enableExperimentalFeatureDatabinding = true
