Change icon, Setting userCleartextTraffic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme"
-      tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+      android:usesCleartextTraffic="true"
+      tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+      tools:targetApi="m">
 
     <meta-data
         android:name="com.google.android.gms.ads.AD_MANAGER_APP"
