--- a/versions.gradle
+++ b/versions.gradle
@@ -40,6 +40,7 @@ versions.coroutines = '1.2.0'
 versions.fragment = '1.0.0'
 versions.koltin_reflect = '1.3.31'
 versions.rev_divider = '3.0.0'
+versions.auto_dispose = '1.2.0'
 def deps = [:]
 
 def androidx = [:]
@@ -118,6 +119,13 @@ def coroutines = [:]
 coroutines.core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines_core"
 coroutines.android = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutines_core"
 deps.coroutines = coroutines
+
+def autodispose = [:]
+autodispose.ktx = "com.uber.autodispose:autodispose-ktx:$versions.auto_dispose"
+autodispose.android_ktx = "com.uber.autodispose:autodispose-android-ktx:$versions.auto_dispose"
+autodispose.android_arch_com_ktx =
+    "com.uber.autodispose:autodispose-android-archcomponents-ktx:$versions.auto_dispose"
+deps.autodispose = autodispose
 
 deps.timber = "com.jakewharton.timber:timber:$versions.timber"
 deps.jsr250_api = "javax.annotation:jsr250-api:$versions.jsr250_api"
