--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,5 @@ kotlin.code.style=official
 # enable the new data binding compiler
 android.databinding.enableV2=true
 #android.enableExperimentalFeatureDatabinding = true
+android.enableR8=true
+android.enableD8=true
